--- a/about.html
+++ b/about.html
@@ -5,7 +5,7 @@
     <link href='favicon.ico' rel='icon' type='image/ico' />
     <link href='favicon.ico' rel='shortcut icon' type='image/ico' />
     <title>Mark Mims, Ph.D. - helping people use math to make better business decisions</title>
-    <link href="/css/normalize.css" media="all" rel="stylesheet" type="text/css"/><link href="/css/application.css" media="all" rel="stylesheet" type="text/css"/>
+    <link href="/css/normalize.css" media="all" rel="stylesheet" type="text/css"/><link href="/css/about.css" media="all" rel="stylesheet" type="text/css"/>
     <link href='http://pip.verisignlabs.com/server' rel='openid.server' />
     <link href='http://mmm.pip.verisignlabs.com/' rel='openid.delegate' />
   </head>
