--- a/about.html
+++ b/about.html
@@ -74,6 +74,9 @@
           <dd>
             <a href="http://utexas.facebook.com/profile.php?id=532511774">Facebook</a>
           </dd>
+          <dd>
+            <a href="http://blog.markmims.com/">Tech Blog</a>
+          </dd>
         </dl>
       </div>
       <div class='white_box'>
