--- a/about.html
+++ b/about.html
@@ -11,7 +11,7 @@
   </head>
   <body>
     <div id='title'>
-      <img src='images/title.png' />
+      <a href="/"><img src='/images/title.png' /></a>
     </div>
     <div id='container'>
       <div id='about-sidebar'>
