--- a/about.html
+++ b/about.html
@@ -103,13 +103,12 @@
               Engineering.
             </p>
             <p>
-              I'm really psyched to work for
-              <a href="http://canonical.com/">Canonical</a>
-              , the people behind
-              <a href="http://ubuntu.com/">Ubuntu.</a>
+              I'm really psyched to work on the Ubuntu Server Team for
+              <a href="http://canonical.com/">Canonical</a>,
+              the people behind the <a href="http://ubuntu.com/">Ubuntu</a> Linux distribution.
             </p>
             <p>
-              Our team builds DevOps tools and
+              We're building DevOps tools and
               <a href="http://ensemble.ubuntu.com/">Ensemble</a>
               formulas to insure Ubuntu remains the clear and easy choice as a Cloud and BigData OS.
             </p>
