--- a/MarkMims-resume.html
+++ b/MarkMims-resume.html
@@ -63,17 +63,28 @@ table.referees { width: 60%; margin-top: 0cm; margin-bottom: 0cm;}
 .skillsetTitle { font-weight: bold }
 .urlA { font-family:sans-serif; color:red; }
 
-</style><meta name="keywords" content="OpenGL, SVR4"></head><body><div class="resume"><div class="header"><h1 class="nameHeading">Mark M. Mims, Ph.D.</h1><p class="address">Boulder, Colorado</p><p>Email: <a href="mailto:mark.mims@gmail.com">mark.mims@gmail.com</a><br>URL: <a href="http://www.markmims.com/">http://www.markmims.com/</a><br></p></div><h2 class="heading"><span class="headingText">Summary</span></h2><ul><li><span class="interestTitle">
+</style><meta name="keywords" content="OpenGL, SVR4"></head><body><div class="resume"><div class="header"><h1 class="nameHeading">Mark M. Mims, Ph.D.</h1><p class="address">Austin/Boulder</p><p>Email: <a href="mailto:mark.mims@gmail.com">mark.mims@gmail.com</a><br>URL: <a href="http://www.markmims.com/">http://www.markmims.com/</a><br></p></div><h2 class="heading"><span class="headingText">Summary</span></h2><ul><li><span class="interestTitle">
+        Member of the Ubuntu Server Team
+      </span></li><li><span class="interestTitle">
         Software Developer (Rails, Ruby/C++/Java)
       </span></li><li><span class="interestTitle">
         Design/Build Private &amp; Hybrid Clouds
       </span></li><li><span class="interestTitle">
-        Enterprise Integration Expert (Chief Architect for $30MM J2EE project in the Energy Industry)
+        Enterprise Integration (Chief Architect for $30MM J2EE project in the Energy Industry)
       </span></li><li><span class="interestTitle">
-        3D Modeling/Simulation/AI Expert
+        3D Modeling/Simulation/AI 
       </span></li><li><span class="interestTitle">
         Ph.D. Physics
-      </span></li></ul><h2 class="heading"><span class="headingText">Employment History</span></h2><p class="job"><span class="jobTitle">Cloud Architect</span><br><span class="employer"><a class="linkA" href="http://www.archethought.com/">Archethought</a></span><span class="location"> (Austin, TX)</span><br>2010-Present</p><div class="jobDescription"><p class="para">
+      </span></li></ul><h2 class="heading"><span class="headingText">Employment History</span></h2><p class="job"><span class="jobTitle">Software Engineer - Ubuntu Server</span><br><span class="employer"><a class="linkA" href="http://www.canonical.com/">Canonical Ltd.</a></span><span class="location"> (Global)</span><br>2011-Present</p><div class="jobDescription"><p class="para">
+          Part of the team working to build juju, a new suite of DevOps
+          tools for Ubuntu Server.  Developing juju charms to orchestrate
+          various services throughout the enterprise. Designing / developing
+          APIs and tools surrounding the juju DevOps stack.  Developing
+          service stacks for everything from Hadoop clusters to complex
+          large-scale infrastructures like Wikipedia.  Integrate / test 
+          deployments on bare metal as well as 
+          EC2, Eucalyptus, and OpenStack cloud infrastructures.
+        </p></div><p class="job"><span class="jobTitle">Cloud Architect</span><br><span class="employer"><a class="linkA" href="http://www.archethought.com/">Archethought</a></span><span class="location"> (Austin, TX)</span><br>2010-2011</p><div class="jobDescription"><p class="para">
           Archethought is a consulting firm specializing in designing
           and building <strong class="emphasis">private and hybrid clouds</strong>
           for colleges and universities around the world.
@@ -92,7 +103,7 @@ table.referees { width: 60%; margin-top: 0cm; margin-bottom: 0cm;}
           with account, instance, image, and storage management.
           </p><p class="para">
           Technology Used:
-          <p><span class="skillSetTitle"></span><span class="skills">Eucalyptus, AWS/EC2 API, RightAWS, Ruby, Rails, Chef.</span></p></p></div><p class="job"><span class="jobTitle">Chief Scientist</span><br><span class="employer"><a class="linkA" href="http://www.agiledynamics.com/">Agile Dynamics</a></span><span class="location"> (Austin, TX)</span><br>2005-Present</p><div class="jobDescription"><p class="para">
+          <p><span class="skillSetTitle"></span><span class="skills">Eucalyptus, AWS/EC2 API, RightAWS, Ruby, Rails, Chef.</span></p></p></div><p class="job"><span class="jobTitle">Chief Scientist</span><br><span class="employer"><a class="linkA" href="http://www.agiledynamics.com/">Agile Dynamics</a></span><span class="location"> (Austin, TX)</span><br>2005-2011</p><div class="jobDescription"><p class="para">
           Agile Dynamics is a consulting firm specializing in 
           <strong class="emphasis">data-driven decision making</strong>, helping
           businesses adopt a more quantitative view of everyday business decisions.
@@ -229,7 +240,17 @@ table.referees { width: 60%; margin-top: 0cm; margin-bottom: 0cm;}
           assist in distributing the simulators.
         </p><p class="para">
           Technology Used:
-          <p><span class="skillSetTitle"></span><span class="skills">C/C++, Tcl/Tk, UNIX and Win32 systems programming, (soft) real-time process scheduling/event management, resource conflict resolution/management, network programming using TCP/IP and NetBIOS, Silicon Graphics O_2, Onyx Reality Engine, and Onyx2 Infinite Reality high-end graphics systems running IRIX(UNIX), i386 hardware running Linux, Win95, NT-4.0, and an in-house real-time OS over DOS/4GW.</span></p></p></div><h2 class="heading"><span class="headingText">Education</span></h2><ul class="degrees"><li class="degree"><span class="degreeTitle">Ph.D. in Physics</span>, 2000<br><span class="institution"><a class="linkA" href="http://www.utexas.edu/">The University of Texas at Austin</a></span><ul><li class="project"><p class="para">
+          <p><span class="skillSetTitle"></span><span class="skills">C/C++, Tcl/Tk, UNIX and Win32 systems programming, (soft) real-time process scheduling/event management, resource conflict resolution/management, network programming using TCP/IP and NetBIOS, Silicon Graphics O_2, Onyx Reality Engine, and Onyx2 Infinite Reality high-end graphics systems running IRIX(UNIX), i386 hardware running Linux, Win95, NT-4.0, and an in-house real-time OS over DOS/4GW.</span></p></p></div><p class="job"><span class="jobTitle">Instructor</span><br><span class="employer">Dept. of Physics - UT Austin</span><span class="location"> (Austin, TX)</span><br>1994-2000</p><div class="jobDescription"><p class="para">
+          Physical Science I: Mechanics (AI, Instructor of Record)
+        </p><p class="para">
+          Lab for Engineering Physics I (TA)
+        </p><p class="para">
+          Lab for General Physics II (TA)
+        </p></div><p class="job"><span class="jobTitle">Lecturer</span><br><span class="employer">Austin Community College</span><span class="location"> (Austin, TX)</span><br>1995-1996</p><div class="jobDescription"><p class="para">
+          Intro to General Physics I
+        </p><p class="para">
+          Engineering Physics I
+        </p></div><h2 class="heading"><span class="headingText">Education</span></h2><ul class="degrees"><li class="degree"><span class="degreeTitle">Ph.D. in Physics</span>, 2000<br><span class="institution"><a class="linkA" href="http://www.utexas.edu/">The University of Texas at Austin</a></span><ul><li class="project"><p class="para">
               Dissertation: "Dynamical Stability of Quantum Algorithms."
               Supervisor: E.C.G. Sudarshan
             </p><div class="description"><p class="para">
@@ -244,4 +265,4 @@ table.referees { width: 60%; margin-top: 0cm; margin-bottom: 0cm;}
                 <p><span class="skillSetTitle"></span><span class="skills">C++, Perl, BASH script, LaTeX, numerical solutions to ODEs, randomization, various matrix calculations (using blitz++, TNT, and LAPACK).</span></p></p></div></li></ul></li><li class="degree"><span class="degreeTitle">B.S. in Physics</span>, 1992<br><span class="institution">The University of Texas at Austin</span></li><li class="degree"><span class="degreeTitle">B.S. in Mathematics</span>, 1992<br><span class="institution">The University of Texas at Austin</span><ul><li class="project"><p class="para">
               Thesis: "Path Integration on Multiply Connected Configuration Spaces."
               Supervisor: Ce'cile DeWitt-Morette
-            </p></li></ul></li></ul><h2 class="heading"><span class="headingText">Publications</span></h2><ul class="pubs"><li class="pub">Luis J. Boya, Mark Byrd, Mark Mims, E. C. G. Sudarshan. "Geometry of n-state systems, pure and mixed". J. Phys.: Conf. Ser. 87 012006. 2007. </li><li class="pub">Mark Mims. "Dynamical Stability of Quantum Algorithms". Dissertation, ISBN:0-493-13630-4. The University of Texas at Austin. 2000. </li></ul></div></body></html>
+            </p></li></ul></li></ul><h2 class="heading"><span class="headingText">Publications</span></h2><ul class="pubs"><li class="pub">Clint Byrum, Mark Mims, Juan Negron. DevOps on Ubuntu Server. O'Reilly. 2012(in progress). </li><li class="pub">Luis J. Boya, Mark Byrd, Mark Mims, E. C. G. Sudarshan. "Geometry of n-state systems, pure and mixed". J. Phys.: Conf. Ser. 87 012006. 2007. </li><li class="pub">Mark Mims. "Dynamical Stability of Quantum Algorithms". Dissertation, ISBN:0-493-13630-4. The University of Texas at Austin. 2000. </li></ul></div></body></html>
