--- a/about.html
+++ b/about.html
@@ -109,8 +109,8 @@
             </p>
             <p>
               We're building DevOps tools and
-              <a href="http://ensemble.ubuntu.com/">Ensemble</a>
-              formulas to insure Ubuntu remains the clear and easy choice as a Cloud and BigData OS.
+              <a href="http://juju.ubuntu.com/">juju</a>
+              charms to insure Ubuntu remains the clear and easy choice as a Cloud and BigData OS.
             </p>
           </div>
           <footer id="footer">
