--- a/about.html
+++ b/about.html
@@ -83,6 +83,9 @@
           <dd>
             <a href="http://launchpad.net/~mark-mims/">LaunchPad</a>
           </dd>
+          <dd>
+            <a href="MarkMims-dissertation.pdf">Research</a>
+          </dd>
         </dl>
       </div>
       <div class='white_box'>
