--- a/about.html
+++ b/about.html
@@ -63,6 +63,12 @@
             <a href="/" title="Blog">Blog</a>
           </dd>
           <dt>
+            Research:
+          </dt>
+          <dd>
+            <a href="MarkMims-dissertation.pdf">Quantum Algorithms</a>
+          </dd>
+          <dt>
             Misc:
           </dt>
           <dd>
@@ -82,9 +88,6 @@
           </dd>
           <dd>
             <a href="http://launchpad.net/~mark-mims/">LaunchPad</a>
-          </dd>
-          <dd>
-            <a href="MarkMims-dissertation.pdf">Research</a>
           </dd>
         </dl>
       </div>
