--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@ title: Posts
       {% endunless %}
     </p>
     {{ post.content }}
+    <p class="comments-link">
+        <a href='{{post.url}}#disqus_thread'>Comments</a>
+    </p>
   </div>
 {% endfor %}
 
@@ -30,3 +33,17 @@ title: Posts
     <span class="next ">Next</span>
   {% endif %}
 </div>
+
+
+<script type="text/javascript">
+  /* * * CONFIGURATION VARIABLES: EDIT BEFORE PASTING INTO YOUR WEBPAGE * * */
+  var disqus_shortname = 'markmims'; // required: replace example with your forum shortname
+
+  /* * * DON'T EDIT BELOW THIS LINE * * */
+  (function () {
+    var s = document.createElement('script'); s.async = true;
+    s.type = 'text/javascript';
+    s.src = 'http://' + disqus_shortname + '.disqus.com/count.js';
+    (document.getElementsByTagName('HEAD')[0] || document.getElementsByTagName('BODY')[0]).appendChild(s);
+  }());
+</script>
