fix formatting errors

--- a/MarkMims-resume.html
+++ b/MarkMims-resume.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/strict.dtd">
-<html><head><META http-equiv="Content-Type" content="text/html; charset=UTF-8"><title>Mark M. Mims, Ph.D. - Resume</title><style>
+<html><head><META http-equiv="Content-Type" content="text/html; charset=UTF-8"><title>Mark M. Mims, Ph.D. - R&eacute;sum&eacute;</title><style>
 
 /*
  * compact.css -- Stylesheet suitable for printing an xmlresume to dead
@@ -16,7 +16,7 @@
 body, table { 
     margin-top: 1cm; 
     margin-bottom: 1cm;
-    font-size: 12pt;
+    font-size: 8pt;
     background-color: white;
     font-family: Arial, Verdana, sans-serif;
 }
@@ -24,7 +24,6 @@ body, table {
 .resume { 
     padding-left: 1.5cm;
     padding-right: 1.5cm;
-    width: 900px;
 }
 h2 {
     margin-left: -.8cm;
@@ -52,9 +51,6 @@ li.degree { margin-bottom: 0.2cm; }
 .employer { font-style: italic }
 .headerBlock { text-align: left }
 .jobTitle { font-weight: bold }
-.job {
-  margin-top: 1cm;
-}
 .lastModified { font-size: 75% }
 .nameHeading { font-family: sans-serif; font-size: 125%; }
 div.referee { margin-bottom: 0.5cm; }
@@ -63,7 +59,7 @@ table.referees { width: 60%; margin-top: 0cm; margin-bottom: 0cm;}
 .skillsetTitle { font-weight: bold }
 .urlA { font-family:sans-serif; color:red; }
 
-</style><meta name="keywords" content="OpenGL, SVR4"></head><body><div class="resume"><div class="header"><h1 class="nameHeading">Mark M. Mims, Ph.D.</h1><p class="address">Austin/Boulder</p><p>Email: <a href="mailto:mark.mims@gmail.com">mark.mims@gmail.com</a><br>URL: <a href="http://www.markmims.com/">http://www.markmims.com/</a><br></p></div><h2 class="heading"><span class="headingText">Summary</span></h2><ul><li><span class="interestTitle">
+</style><meta name="keywords" content="OpenGL, SVR4"></head><body><div class="resume"><div class="header"><h1 class="nameHeading">Mark M. Mims, Ph.D.</h1><p class="address">Austin/Boulder</p><p>Email: <a href="mailto:mark.mims@gmail.com">mark.mims@gmail.com</a><br>URL: <a href="http://www.markmims.com/">http://www.markmims.com/</a><br></p></div><h2 class="heading"><span class="headingText">Interests</span></h2><ul><li><span class="interestTitle">
         Member of the Ubuntu Server Team
       </span></li><li><span class="interestTitle">
         Software Developer (Rails, Ruby/C++/Java)
