--- a/MarkMims-resume.html
+++ b/MarkMims-resume.html
@@ -59,19 +59,19 @@ table.referees { width: 60%; margin-top: 0cm; margin-bottom: 0cm;}
 .skillsetTitle { font-weight: bold }
 .urlA { font-family:sans-serif; color:red; }
 
-</style><meta name="keywords" content="OpenGL, SVR4"></head><body><div class="resume"><div class="header"><h1 class="nameHeading">Mark M. Mims, Ph.D.</h1><p class="address">Austin/Boulder</p><p>Email: <a href="mailto:mark.mims@gmail.com">mark.mims@gmail.com</a><br>URL: <a href="http://www.markmims.com/">http://www.markmims.com/</a><br></p></div><h2 class="heading"><span class="headingText">Interests</span></h2><ul><li><span class="interestTitle">
+</style><meta name="keywords" content="OpenGL, SVR4"></head><body><div class="resume"><div class="header"><h1 class="nameHeading">Mark M. Mims, Ph.D.</h1><p>Email: <a href="mailto:mark.mims@gmail.com">mark.mims@gmail.com</a><br>URL: <a href="http://www.markmims.com/">http://www.markmims.com/</a><br></p></div><ul><li class="achievement">
         Member of the Ubuntu Server Team
-      </span></li><li><span class="interestTitle">
-        Software Developer (Rails, Ruby/C++/Java)
-      </span></li><li><span class="interestTitle">
+      </li><li class="achievement">
+        Software Developer (Ruby/C++/Java/Python)
+      </li><li class="achievement">
         Design/Build Private &amp; Hybrid Clouds
-      </span></li><li><span class="interestTitle">
+      </li><li class="achievement">
         Enterprise Integration (Chief Architect for $30MM J2EE project in the Energy Industry)
-      </span></li><li><span class="interestTitle">
+      </li><li class="achievement">
         3D Modeling/Simulation/AI 
-      </span></li><li><span class="interestTitle">
-        Ph.D. Physics
-      </span></li></ul><h2 class="heading"><span class="headingText">Employment History</span></h2><p class="job"><span class="jobTitle">Software Engineer - Ubuntu Server</span><br><span class="employer"><a class="linkA" href="http://www.canonical.com/">Canonical Ltd.</a></span><span class="location"> (Global)</span><br>2011-Present</p><div class="jobDescription"><p class="para">
+      </li><li class="achievement">
+        Ph.D. Physics - Quantum Computation
+      </li></ul><h2 class="heading"><span class="headingText">Employment History</span></h2><p class="job"><span class="jobTitle">Software Engineer - Ubuntu Server</span><br><span class="employer"><a class="linkA" href="http://www.canonical.com/">Canonical Ltd.</a></span><span class="location"> (Global)</span><br>2011-Present</p><div class="jobDescription"><p class="para">
           Part of the team working to build juju, a new suite of DevOps
           tools for Ubuntu Server.  Developing juju charms to orchestrate
           various services throughout the enterprise. Designing / developing
@@ -94,7 +94,6 @@ table.referees { width: 60%; margin-top: 0cm; margin-bottom: 0cm;}
           Storage Systems, and cloud-based High Performance Computing Systems.
           Help integrate the Cloud Computing System with existing systems and 
           applications throughout the university environment.
-        </p><p class="para">
           This includes a web-based (Rails) Cloud Management Console
           with account, instance, image, and storage management.
           </p><p class="para">
@@ -261,4 +260,4 @@ table.referees { width: 60%; margin-top: 0cm; margin-bottom: 0cm;}
                 <p><span class="skillSetTitle"></span><span class="skills">C++, Perl, BASH script, LaTeX, numerical solutions to ODEs, randomization, various matrix calculations (using blitz++, TNT, and LAPACK).</span></p></p></div></li></ul></li><li class="degree"><span class="degreeTitle">B.S. in Physics</span>, 1992<br><span class="institution">The University of Texas at Austin</span></li><li class="degree"><span class="degreeTitle">B.S. in Mathematics</span>, 1992<br><span class="institution">The University of Texas at Austin</span><ul><li class="project"><p class="para">
               Thesis: "Path Integration on Multiply Connected Configuration Spaces."
               Supervisor: Ce'cile DeWitt-Morette
-            </p></li></ul></li></ul><h2 class="heading"><span class="headingText">Publications</span></h2><ul class="pubs"><li class="pub">Clint Byrum, Mark Mims, Juan Negron. DevOps on Ubuntu Server. 2012(in progress). </li><li class="pub">Luis J. Boya, Mark Byrd, Mark Mims, E. C. G. Sudarshan. "Geometry of n-state systems, pure and mixed". J. Phys.: Conf. Ser. 87 012006. 2007. </li><li class="pub">Mark Mims. "Dynamical Stability of Quantum Algorithms". Dissertation, ISBN:0-493-13630-4. The University of Texas at Austin. 2000. </li></ul></div></body></html>
+            </p></li></ul></li></ul><h2 class="heading"><span class="headingText">Publications</span></h2><ul class="pubs"><li class="pub">Luis J. Boya, Mark Byrd, Mark Mims, E. C. G. Sudarshan. "Geometry of n-state systems, pure and mixed". J. Phys.: Conf. Ser. 87 012006. 2007. </li><li class="pub">Mark Mims. "Dynamical Stability of Quantum Algorithms". Dissertation, ISBN:0-493-13630-4. The University of Texas at Austin. 2000. </li></ul></div></body></html>
