--- a/source/MarkMims-resume.html
+++ b/source/MarkMims-resume.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/strict.dtd">
-<html><head><META http-equiv="Content-Type" content="text/html; charset=UTF-8"><title>Mark M. Mims, Ph.D. - Resume</title><style>
+<html><head><META http-equiv="Content-Type" content="text/html; charset=UTF-8"><title>Mark M. Mims, Ph.D. - R&eacute;sum&eacute;</title><style>
 
 /*
  * compact.css -- Stylesheet suitable for printing an xmlresume to dead
@@ -16,7 +16,7 @@
 body, table { 
     margin-top: 1cm; 
     margin-bottom: 1cm;
-    font-size: 12pt;
+    font-size: 8pt;
     background-color: white;
     font-family: Arial, Verdana, sans-serif;
 }
@@ -24,7 +24,6 @@ body, table {
 .resume { 
     padding-left: 1.5cm;
     padding-right: 1.5cm;
-    width: 900px;
 }
 h2 {
     margin-left: -.8cm;
@@ -52,9 +51,6 @@ li.degree { margin-bottom: 0.2cm; }
 .employer { font-style: italic }
 .headerBlock { text-align: left }
 .jobTitle { font-weight: bold }
-.job {
-  margin-top: 1cm;
-}
 .lastModified { font-size: 75% }
 .nameHeading { font-family: sans-serif; font-size: 125%; }
 div.referee { margin-bottom: 0.5cm; }
@@ -63,19 +59,19 @@ table.referees { width: 60%; margin-top: 0cm; margin-bottom: 0cm;}
 .skillsetTitle { font-weight: bold }
 .urlA { font-family:sans-serif; color:red; }
 
-</style><meta name="keywords" content="OpenGL, SVR4"></head><body><div class="resume"><div class="header"><h1 class="nameHeading">Mark M. Mims, Ph.D.</h1><p class="address">Austin/Boulder</p><p>Email: <a href="mailto:mark.mims@gmail.com">mark.mims@gmail.com</a><br>URL: <a href="http://www.markmims.com/">http://www.markmims.com/</a><br></p></div><h2 class="heading"><span class="headingText">Summary</span></h2><ul><li><span class="interestTitle">
+</style><meta name="keywords" content="OpenGL, SVR4"></head><body><div class="resume"><div class="header"><h1 class="nameHeading">Mark M. Mims, Ph.D.</h1><p>Email: <a href="mailto:mark.mims@gmail.com">mark.mims@gmail.com</a><br>URL: <a href="http://www.markmims.com/">http://www.markmims.com/</a><br></p></div><ul><li class="achievement">
         Member of the Ubuntu Server Team
-      </span></li><li><span class="interestTitle">
-        Software Developer (Rails, Ruby/C++/Java)
-      </span></li><li><span class="interestTitle">
+      </li><li class="achievement">
+        Software Developer (Ruby/C++/Java/Python)
+      </li><li class="achievement">
         Design/Build Private &amp; Hybrid Clouds
-      </span></li><li><span class="interestTitle">
+      </li><li class="achievement">
         Enterprise Integration (Chief Architect for $30MM J2EE project in the Energy Industry)
-      </span></li><li><span class="interestTitle">
+      </li><li class="achievement">
         3D Modeling/Simulation/AI 
-      </span></li><li><span class="interestTitle">
-        Ph.D. Physics
-      </span></li></ul><h2 class="heading"><span class="headingText">Employment History</span></h2><p class="job"><span class="jobTitle">Software Engineer - Ubuntu Server</span><br><span class="employer"><a class="linkA" href="http://www.canonical.com/">Canonical Ltd.</a></span><span class="location"> (Global)</span><br>2011-Present</p><div class="jobDescription"><p class="para">
+      </li><li class="achievement">
+        Ph.D. Physics - Quantum Computation
+      </li></ul><h2 class="heading"><span class="headingText">Employment History</span></h2><p class="job"><span class="jobTitle">Software Engineer - Ubuntu Server</span><br><span class="employer"><a class="linkA" href="http://www.canonical.com/">Canonical Ltd.</a></span><span class="location"> (Global)</span><br>2011-Present</p><div class="jobDescription"><p class="para">
           Part of the team working to build juju, a new suite of DevOps
           tools for Ubuntu Server.  Developing juju charms to orchestrate
           various services throughout the enterprise. Designing / developing
@@ -98,7 +94,6 @@ table.referees { width: 60%; margin-top: 0cm; margin-bottom: 0cm;}
           Storage Systems, and cloud-based High Performance Computing Systems.
           Help integrate the Cloud Computing System with existing systems and 
           applications throughout the university environment.
-        </p><p class="para">
           This includes a web-based (Rails) Cloud Management Console
           with account, instance, image, and storage management.
           </p><p class="para">
@@ -265,4 +260,4 @@ table.referees { width: 60%; margin-top: 0cm; margin-bottom: 0cm;}
                 <p><span class="skillSetTitle"></span><span class="skills">C++, Perl, BASH script, LaTeX, numerical solutions to ODEs, randomization, various matrix calculations (using blitz++, TNT, and LAPACK).</span></p></p></div></li></ul></li><li class="degree"><span class="degreeTitle">B.S. in Physics</span>, 1992<br><span class="institution">The University of Texas at Austin</span></li><li class="degree"><span class="degreeTitle">B.S. in Mathematics</span>, 1992<br><span class="institution">The University of Texas at Austin</span><ul><li class="project"><p class="para">
               Thesis: "Path Integration on Multiply Connected Configuration Spaces."
               Supervisor: Ce'cile DeWitt-Morette
-            </p></li></ul></li></ul><h2 class="heading"><span class="headingText">Publications</span></h2><ul class="pubs"><li class="pub">Clint Byrum, Mark Mims, Juan Negron. DevOps on Ubuntu Server. 2012(in progress). </li><li class="pub">Luis J. Boya, Mark Byrd, Mark Mims, E. C. G. Sudarshan. "Geometry of n-state systems, pure and mixed". J. Phys.: Conf. Ser. 87 012006. 2007. </li><li class="pub">Mark Mims. "Dynamical Stability of Quantum Algorithms". Dissertation, ISBN:0-493-13630-4. The University of Texas at Austin. 2000. </li></ul></div></body></html>
+            </p></li></ul></li></ul><h2 class="heading"><span class="headingText">Publications</span></h2><ul class="pubs"><li class="pub">Luis J. Boya, Mark Byrd, Mark Mims, E. C. G. Sudarshan. "Geometry of n-state systems, pure and mixed". J. Phys.: Conf. Ser. 87 012006. 2007. </li><li class="pub">Mark Mims. "Dynamical Stability of Quantum Algorithms". Dissertation, ISBN:0-493-13630-4. The University of Texas at Austin. 2000. </li></ul></div></body></html>
