wording on the bio

--- a/source/MarkMims-resume.html
+++ b/source/MarkMims-resume.html
@@ -60,27 +60,32 @@ table.referees { width: 60%; margin-top: 0cm; margin-bottom: 0cm;}
 .urlA { font-family:sans-serif; color:red; }
 
 </style><meta name="keywords" content="OpenGL, SVR4"></head><body><div class="resume"><div class="header"><h1 class="nameHeading">Mark M. Mims, Ph.D.</h1><p>Email: <a href="mailto:mark.mims@gmail.com">mark.mims@gmail.com</a><br>URL: <a href="http://www.markmims.com/">http://www.markmims.com/</a><br></p></div><ul><li class="achievement">
-        Member of the Ubuntu Server Team
+        Experienced Data Scientist
       </li><li class="achievement">
-        Software Developer (Ruby/C++/Java/Python)
+        Developer on the Ubuntu Server Team
       </li><li class="achievement">
-        Design/Build Private &amp; Hybrid Clouds
+        Private &amp; Hybrid Cloud and Cloud Application Architect
       </li><li class="achievement">
-        Enterprise Integration (Chief Architect for $30MM J2EE project in the Energy Industry)
+        Enterprise Experience (Chief Architect for $30MM J2EE project in the Energy Industry)
       </li><li class="achievement">
-        3D Modeling/Simulation/AI 
+        Entrepreneurial Experience (Data Science and DevOps Consulting)
       </li><li class="achievement">
         Ph.D. Physics - Quantum Computation
-      </li></ul><h2 class="heading"><span class="headingText">Employment History</span></h2><p class="job"><span class="jobTitle">Software Engineer - Ubuntu Server</span><br><span class="employer"><a class="linkA" href="http://www.canonical.com/">Canonical Ltd.</a></span><span class="location"> (Global)</span><br>2011-Present</p><div class="jobDescription"><p class="para">
-          Part of the team working to build juju, a new suite of DevOps
-          tools for Ubuntu Server.  Developing juju charms to orchestrate
-          various services throughout the enterprise. Designing / developing
-          APIs and tools surrounding the juju DevOps stack.  Developing
-          service stacks for everything from Hadoop clusters to complex
-          large-scale infrastructures like Wikipedia.  Integrate / test 
-          deployments on bare metal as well as 
-          EC2, Eucalyptus, and OpenStack cloud infrastructures.
-        </p></div><p class="job"><span class="jobTitle">Cloud Architect</span><br><span class="employer"><a class="linkA" href="http://www.archethought.com/">Archethought</a></span><span class="location"> (Austin, TX)</span><br>2010-2011</p><div class="jobDescription"><p class="para">
+      </li></ul><h2 class="heading"><span class="headingText">Employment History</span></h2><p class="job"><span class="jobTitle">Software Engineer - Ubuntu Server Team</span><br><span class="employer"><a class="linkA" href="http://www.canonical.com/">Canonical Ltd.</a></span><span class="location"> (Logan / UK)</span><br>2011-Present</p><div class="jobDescription"><p class="para">
+          Building DevOps tools for Ubuntu Server.
+        </p><p class="para">
+          Part of the team working to build Juju, a new suite of DevOps tools for Ubuntu Server. Developing juju charms to orchestrate various services throughout the enterprise. Designing / developing APIs and tools surrounding the juju DevOps stack. Integrate / test deployments on LXC, bare metal-as-a-service (MaaS) as well as EC2 and OpenStack cloud infrastructures.
+        </p><p class="para">
+          Implement data-intensive service stacks and using Juju to capture, test, and model data science pipelines.
+        </p></div><p class="job"><span class="jobTitle">Visiting Scholar</span><br><span class="employer"><a class="linkA" href="http://physics.usu.edu/">Department of Physics, Utah State University</a></span><span class="location"> (Logan)</span><br>2012-Present</p><div class="jobDescription"><p class="para">
+          Research in data management and data modeling.
+        </p><p class="para">
+          Particularly interested in data plumbing and the toolchains surrounding data science pipelines and how they effect subsequent results at various scales.
+        </p><p class="para">
+          Helping define curricula for data science tracks within various departments in universities across the US.
+        </p></div><p class="job"><span class="jobTitle">Cloud Architect</span><br><span class="employer"><a class="linkA" href="http://www.archethought.com/">Archethought</a></span><span class="location"> (Austin / Boulder)</span><br>2010-2011</p><div class="jobDescription"><p class="para">
+          Building private and hybrid clouds and cloud applications for universities.
+        </p><p class="para">
           Archethought is a consulting firm specializing in designing
           and building <strong class="emphasis">private and hybrid clouds</strong>
           for colleges and universities around the world.
@@ -98,13 +103,8 @@ table.referees { width: 60%; margin-top: 0cm; margin-bottom: 0cm;}
           with account, instance, image, and storage management.
           </p><p class="para">
           Technology Used:
-          <p><span class="skillSetTitle"></span><span class="skills">Eucalyptus, AWS/EC2 API, RightAWS, Ruby, Rails, Chef.</span></p></p></div><p class="job"><span class="jobTitle">Chief Scientist</span><br><span class="employer"><a class="linkA" href="http://www.agiledynamics.com/">Agile Dynamics</a></span><span class="location"> (Austin, TX)</span><br>2005-2011</p><div class="jobDescription"><p class="para">
-          Agile Dynamics is a consulting firm specializing in 
-          <strong class="emphasis">data-driven decision making</strong>, helping
-          businesses adopt a more quantitative view of everyday business decisions.
-          We provide the leadership, business acumen, and technical expertise necessary 
-          to adapt business processes and implement the enterprise software 
-          needed to support this process across various different industries.
+          <p><span class="skillSetTitle"></span><span class="skills">Eucalyptus, AWS/EC2 API, RightAWS, Ruby, Rails, Chef.</span></p></p></div><p class="job"><span class="jobTitle">Founder / Chief Scientist</span><br><span class="employer"><a class="linkA" href="http://www.agiledynamics.com/">Agile Dynamics</a></span><span class="location"> (Austin)</span><br>2005-2011</p><div class="jobDescription"><p class="para">
+          Data Science Consulting.
         </p><p class="para">
           Designed and built a <strong class="emphasis">data-driven decision support
           system</strong> for the Jamaican Ministry of Education.
@@ -128,12 +128,6 @@ table.referees { width: 60%; margin-top: 0cm; margin-bottom: 0cm;}
           Designed/built web-based bulk data importers for a game company wanting a portal for
           customers to manage game content.
           </p><p class="para">
-          Provide <strong class="emphasis">social network integration</strong> services to help
-          today's businesses migrate away from traditional marketing models and 
-          embrace a new role as part of a community of customers.
-          This includes management consulting and the development of web-based
-          applications and Facebook apps using Ruby on Rails.
-          </p><p class="para">
           Provided quantitative marketing tools and services for the 
           visualization and <strong class="emphasis">modeling
             of social networks</strong>.  Allowed for trend identification and analysis, growth rate predictions, 
@@ -149,12 +143,12 @@ table.referees { width: 60%; margin-top: 0cm; margin-bottom: 0cm;}
           Java/SWT/WebStart and interfaced with a variety of legacy apps and databases.
         </p><p class="para">
           Technology Used:
-          <p><span class="skillSetTitle"></span><span class="skills">Ruby, Rails, Java, SWT/JFace.</span></p></p></div><p class="job"><span class="jobTitle">Chief Technology Officer</span><br><span class="employer"><a class="linkA" href="http://www.rationalsystems.com/">Rational Systems</a></span><span class="location"> (Houston, TX)</span><br>2002-2005</p><div class="jobDescription"><p class="para">
-          Developed business 
-          models for the Energy Industry and then designed / developed
-          systems to implement these models.  For regulated energy
-          utilities, this allows for efficient daily operations and longterm
-          optimization decisions.  Directed delivery of two complete product
+          <p><span class="skillSetTitle"></span><span class="skills">Ruby, Rails, Java, SWT/JFace.</span></p></p></div><p class="job"><span class="jobTitle">Board of Directors</span><br><span class="employer"><a class="linkA" href="http://www.lonestarruby.org/">LoneStarRuby Foundation</a></span><span class="location"> (Austin)</span><br>2009-2011</p><div class="jobDescription"><p class="para">
+          LSRF organizes an annual LoneStarRuby Conference
+        </p></div><p class="job"><span class="jobTitle">Chief Technology Officer</span><br><span class="employer"><a class="linkA" href="http://www.rationalsystems.com/">Rational Systems</a></span><span class="location"> (Houston)</span><br>2002-2005</p><div class="jobDescription"><p class="para">
+          Building Operations/Optimization systems for the Energy Industry.
+        </p><p class="para">
+          Directed delivery of two complete product
           lines, Rational Pipe(TM) and Rational Catalyst(TM), from conception.  
         </p><p class="para">
           Rational Pipe is software designed to 
@@ -164,7 +158,7 @@ table.referees { width: 60%; margin-top: 0cm; margin-bottom: 0cm;}
           It was the result of a 140+ man-year, joint
           development project between Rational Systems and a major US
           interstate natural gas pipeline, utilizing Rational's Rights-Based
-          engine (pat pending).
+          engine.
         </p><p class="para">
           Chief Architect for this $30M project delivered on time and on
           budget. Provided Technical leadership for a team of approximately thirty
@@ -187,7 +181,9 @@ table.referees { width: 60%; margin-top: 0cm; margin-bottom: 0cm;}
           2000 using MFC/ATL/COM plugins in C++.
         </p><p class="para">
           Technology Used:
-          <p><span class="skillSetTitle"></span><span class="skills">Java, C#, C++, J2EE Design/Development, .NET, Business modeling, MFC, ATL, COM, Tibco, SQLServer 2000 with Analysis Services, Enterprise Hardware (Compaq/HP) running Windows 2000 Server, Windows 2003 Server, Red Hat 9 and Fedora Core 2-3, Microsoft SharePoint, Linux.</span></p></p></div><p class="job"><span class="jobTitle">Lead Software Architect</span><br><span class="employer"><a class="linkA" href="http://www.aegistg.com/">The AEgis Technologies Group, Inc.</a></span><span class="location"> (Austin, TX)</span><br>2000-2002</p><div class="jobDescription"><p class="para"> 
+          <p><span class="skillSetTitle"></span><span class="skills">Java, C#, C++, J2EE Design/Development, .NET, Business modeling, MFC, ATL, COM, Tibco, SQLServer 2000 with Analysis Services, Enterprise Hardware (Compaq/HP) running Windows 2000 Server, Windows 2003 Server, Red Hat 9 and Fedora Core 2-3, Microsoft SharePoint, Linux.</span></p></p></div><p class="job"><span class="jobTitle">Lead Software Architect</span><br><span class="employer"><a class="linkA" href="http://www.aegistg.com/">The AEgis Technologies Group, Inc.</a></span><span class="location"> (Austin)</span><br>2000-2002</p><div class="jobDescription"><p class="para"> 
+          Building IDEs for Simulation Engineers.
+        </p><p class="para"> 
           Principal architect of AEgis' AcslXtreme(TM)
           product line, a suite of 
           <strong class="emphasis">commercial simulation tools</strong> 
@@ -212,7 +208,9 @@ table.referees { width: 60%; margin-top: 0cm; margin-bottom: 0cm;}
           Technology Used:
           <p><span class="skillSetTitle"></span><span class="skills">C/C++, C#, Java, .NET, MATLAB, VB, FORTRAN, UNIX and Win32 systems programming, MFC, COM/DCOM, CORBA, SOAP, HLA, ANTLR, lex/yacc, UML, RUP, GoF design patterns, object-oriented design, component-based design, Windows .NET, Various flavors of UNIX/Linux (some components native, UI(MFC) components ported using Bristol porting tools).</span></p></p></div><p class="job"><span class="jobTitle">Software Developer</span><br><span class="employer"><a class="linkA" href="http://www.wesson.com/">Wesson International, Inc.</a>, 
         now
-        <a class="linkA" href="http://www.adacel.com/">Adacel Technologies, Ltd.</a></span><span class="location"> (Austin, TX)</span><br>1996-1998</p><div class="jobDescription"><p class="para">
+        <a class="linkA" href="http://www.adacel.com/">Adacel Technologies, Ltd.</a></span><span class="location"> (Austin)</span><br>1996-1998</p><div class="jobDescription"><p class="para">
+          Building Air Traffic Control simulators.
+        </p><p class="para">
           Responsible for creating and maintaining
           realistic aircraft movement and intelligent pilot behavior in a
           multi-platform, scaleable
@@ -235,13 +233,13 @@ table.referees { width: 60%; margin-top: 0cm; margin-bottom: 0cm;}
           assist in distributing the simulators.
         </p><p class="para">
           Technology Used:
-          <p><span class="skillSetTitle"></span><span class="skills">C/C++, Tcl/Tk, UNIX and Win32 systems programming, (soft) real-time process scheduling/event management, resource conflict resolution/management, network programming using TCP/IP and NetBIOS, Silicon Graphics O_2, Onyx Reality Engine, and Onyx2 Infinite Reality high-end graphics systems running IRIX(UNIX), i386 hardware running Linux, Win95, NT-4.0, and an in-house real-time OS over DOS/4GW.</span></p></p></div><p class="job"><span class="jobTitle">Instructor</span><br><span class="employer">Dept. of Physics - UT Austin</span><span class="location"> (Austin, TX)</span><br>1994-2000</p><div class="jobDescription"><p class="para">
+          <p><span class="skillSetTitle"></span><span class="skills">C/C++, Tcl/Tk, UNIX and Win32 systems programming, (soft) real-time process scheduling/event management, resource conflict resolution/management, network programming using TCP/IP and NetBIOS, Silicon Graphics O_2, Onyx Reality Engine, and Onyx2 Infinite Reality high-end graphics systems running IRIX(UNIX), i386 hardware running Linux, Win95, NT-4.0, and an in-house real-time OS over DOS/4GW.</span></p></p></div><p class="job"><span class="jobTitle">Instructor</span><br><span class="employer">Dept. of Physics - UT Austin</span><span class="location"> (Austin)</span><br>1994-2000</p><div class="jobDescription"><p class="para">
           Physical Science I: Mechanics (AI, Instructor of Record)
         </p><p class="para">
           Lab for Engineering Physics I (TA)
         </p><p class="para">
           Lab for General Physics II (TA)
-        </p></div><p class="job"><span class="jobTitle">Lecturer</span><br><span class="employer">Austin Community College</span><span class="location"> (Austin, TX)</span><br>1995-1996</p><div class="jobDescription"><p class="para">
+        </p></div><p class="job"><span class="jobTitle">Lecturer</span><br><span class="employer">Austin Community College</span><span class="location"> (Austin)</span><br>1995-1996</p><div class="jobDescription"><p class="para">
           Intro to General Physics I
         </p><p class="para">
           Engineering Physics I
